# news-joker

./: .env.example  .gitignore  database  pyproject.toml  requirements.txt  session.session  session1.session
news-meme-gen/: censorship.py  get_last_message.py  main.py  saiga_def.py
news-meme-gen/config/: config.py
news-meme-gen/database/: database.py
news-meme-gen/filters/: filters.py
news-meme-gen/handlers/: news_handlers.py  other_handlers.py  rating_handlers.py
news-meme-gen/keyboards/: keyboards.py  set_menu.py
news-meme-gen/lexicon/: lexicon.py
news-meme-gen/middlewares/: middlewares.py
news-meme-gen/models/: audio.py  interface.py  photo.py  text.py
news-meme-gen/prompts/: prompts.py
news-meme-gen/ria_mirroring_ugaralka/: mainloop.py
news-meme-gen/states/: states.py
news-meme-gen/utils/: get_ratings.py
