[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "news-meme-gen"
version = "0.1.0"
requires-python = ">= 3.8"
description = "Generator of memes from news."
readme = "README.md"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.mypy]
mypy_path="news-meme-gen"
follow_imports = "normal"

[tool.setuptools]
py-modules = []